dev/k8s/dev/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mysql
  name: phpmyadmin
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: phpmyadmin
